# hasch

./: .gitignore  Makefile  README.md  hasch.cabal
app/: Main.hs
examples/: simple.scm
examples/the-little-schemer/: README.md  the-little-schemer.scm
src/: Envir.hs  Eval.hs  FileReader.hs  Numbers.hs  Parser.hs  Repl.hs  Result.hs  Scheme.hs  StdinReader.hs  StringReader.hs  Types.hs
tests/: EnvirTest.hs  EvalTest.hs  Main.hs  ParserTest.hs  ReaderTest.hs  SchemeTest.hs  TypesTest.hs
