cabal-version:      2.4
name:               hasch
version:            0.1.0.0

author:             Tymoteusz Wołodźko

executable hasch
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0, hasch-lib
    hs-source-dirs:   app
    default-language: Haskell2010

library hasch-lib
    exposed-modules:  Parser, Types, Envir, Eval, Repl, Scheme, Numbers, StringReader, StdinReader, FileReader
    build-depends:    base ^>=4.16.4.0, containers ^>=0.6.0.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    ParserTest, EnvirTest, EvalTest, SchemeTest, TypesTest, ReaderTest
    build-depends:    base ^>=4.16.4.0, containers ^>=0.6.0.0, HUnit ^>=1.6, regex-compat ^>=0.95.1, hasch-lib
    hs-source-dirs:   tests
    default-language: Haskell2010
